# THE-HYBRID-ENGINE1

./: .gitignore  BUILD-README.txt  BUILD-TREE.md  HANDOFF.md  README.txt  _headers  _redirects  app.js  changelog.md  focused-ui.js  hybrid-engine-app.html  hybrid-engine-design-mock.html  index.html  integrations-ui.js  native-ui.css  privacy.html  readme.txt  service-worker.js  supabase-schema.sql
.claude/: launch.json
.github/workflows/: android-apk.yml  windows-exe.yml
.well-known/: assetlinks.json
THE-HYBRID-ENGINE1/: .gitignore  _redirects  changelog.md  index.html  pwa.js  service-worker.js
THE-HYBRID-ENGINE1/app/: _headers  index.html  netlify.toml  package-lock.json
app/: changelog.md  index.html  manifest.json  package.json  service-worker.js
checks/: _shots.mjs  browser-smoke.mjs  coach-smoke.mjs  emit-contract.mjs  first-cycle-template-check.mjs  focused-builder-map-check.mjs  native-pwa-smoke.mjs  pentest.mjs  torture.mjs  whoop-contract.mjs  whoop-deployment-smoke.mjs
coach/: GO-LIVE.md  HARDENING-PATCH.sql  _headers  _mockshot.mjs  coach-builder-trainheroic.html  coach-design-mock.html  index.html  netlify.toml
harness/: lib.mjs  top100.mjs
imports/: THE-hybrid-top100-import.json  hybrid-baselines.md
native/: README.md
native/windows/src-tauri/: Cargo.toml  tauri.conf.json
native/windows/src-tauri/src/: main.rs
source-data-trainheroic/: exercise_library.csv  readiness_survey_data.csv  sent_messages.csv  teams.csv
the-hybrid-engine-netlify/: README.txt  changelog.md  focused-ui.js  index.html  privacy.html  service-worker.js
(+40 files in other folders)
