[package]
name = "hybrid-engine"
version = "1.0.0"
description = "THE Hybrid Engine"
authors = ["reflectprotect123-max"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
